--- a/DesktopOpen.html
+++ b/DesktopOpen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon Desktop</title>
-    <link rel="stylesheet" href="DesktopOpen.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/rksobers/Freemote/main/DesktopOpen.css">
 </head>
 <body>
     <div class ="all-container">
