--- a/DesktopOpen.html
+++ b/DesktopOpen.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class ="all-container">
-        <img src="https://github.dev/rksobers/Freemote/blob/main/adidaslogo.png" alt="logo" id ="logo">
+        <img src="https://github.com/rksobers/Freemote/blob/main/adidaslogo.png?raw=true" alt="logo" id ="logo">
     
     <div id = "athlete-mobile"></div>
     <div class = "all-content-container">
